Fix duplicates link-related entries in context menu

BUG: 426808
FIXED-IN: 20.08.3

!237